# TradingAgents

./: .gitignore  .mcp.json  AGENTS.md
.agents/skills/kw-apply-change/: SKILL.md
.agents/skills/kw-archive-change/: SKILL.md
.agents/skills/kw-capability-package/: SKILL.md
.agents/skills/kw-explore/: SKILL.md
.agents/skills/kw-finish-change/: SKILL.md
.agents/skills/kw-knowledge-baseline/: SKILL.md
.agents/skills/kw-knowledge-writing-policy/: SKILL.md
.agents/skills/kw-project-capability/: SKILL.md
.agents/skills/kw-propose/: SKILL.md
.agents/skills/kw-self-bootstrap/: SKILL.md
.agents/skills/kw-upgrade/: SKILL.md
.agents/skills/kw-workflow-extension/: SKILL.md
.kw/: project-capabilities.json
cli/: AGENTS.md
control/: .gitignore  AGENTS.md
control/.agents/skills/kw-apply-change/: SKILL.md
control/.agents/skills/kw-archive-change/: SKILL.md
control/.codex/: hooks.json
control/.codex/rules/: kw.rules
control/.kw/: kw-lock.json  kw-update-policy.json  project-agent-permissions.json  project-capabilities.json  template-manifest.json
control/.kw/index/: change-contexts.json  changes.json  knowledge-candidates.json  knowledge.json  runtime.json  specs.json
control/.kw/workspace/: workspace.json
opencode-mcp/: README.md  pyproject.toml
opencode-mcp/src/opencode_mcp/: __init__.py  server.py  tools.py
opencode-mcp/tests/: test_tools.py
tradingagents/: AGENTS.md
tradingagents/agents/: AGENTS.md
tradingagents/dataflows/: AGENTS.md
tradingagents/graph/: AGENTS.md
tradingagents/llm_clients/: AGENTS.md
(+17 files in other folders)
